--- a/package.json
+++ b/package.json
@@ -1,3 +1,7 @@
 {
-  "name": "hardhat-project"
+  "name": "hardhat-project",
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.5.0",
+    "hardhat-gas-reporter": "^1.0.8"
+  }
 }
