--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
+    "hardhat-docgen": "^1.3.0",
     "hardhat-gas-reporter": "^1.0.8"
   }
 }
