--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@openzeppelin/contracts": "^4.5.0",
     "chai": "^4.3.6",
     "hardhat-docgen": "^1.3.0",
-    "hardhat-gas-reporter": "^1.0.8"
+    "hardhat-gas-reporter": "^1.0.8",
+    "merkletreejs": "^0.2.30"
   }
 }
